infrastructure/kubernetes/http-collector-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    klamoa: http-collector-service
  name: http-collector-service
spec:
  replicas: 1
  selector:
    matchLabels:
      klamoa: http-collector-service
  template:
    metadata:
      labels:
        klamoa: http-collector-service
    spec:
      containers:
        - env:
            - name: QUARKUS_HTTP_HOST
              value: 0.0.0.0
            - name: RABBITMQ_HOST
              value: rabbitmq
            - name: RABBITMQ_PORT # NOTE: otherwise the port is set as a string
              value: "5672"
          image: klamoa/http-collector-service
          name: http-collector-service
          imagePullPolicy: IfNotPresent # NOTE: needed for local built images
          ports:
            - containerPort: 8082
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8082
            initialDelaySeconds: 5
            periodSeconds: 5
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  labels:
    klamoa: http-collector-service
  name: http-collector-service
spec:
  type: ClusterIP
  ports:
    - name: "8082"
      port: 8082
      targetPort: 8082
  selector:
    klamoa: http-collector-service
