infrastructure/kubernetes/measurement-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: measurement-frontend
  labels:
    klamoa: measurement-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      klamoa: measurement-frontend
  template:
    metadata:
      labels:
        klamoa: measurement-frontend
    spec:
      containers:
        - name: measurement-frontend
          image: klamoa/measurement-frontend
          ports:
            - containerPort: 80
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: measurement-frontend
spec:
  type: ClusterIP
  selector:
    klamoa: measurement-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
