infrastructure/kubernetes/rabbitmq.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    klamoa: rabbitmq
  name: rabbitmq
spec:
  serviceName: "rabbitmq"
  replicas: 1
  selector:
    matchLabels:
      klamoa: rabbitmq
  template:
    metadata:
      labels:
        klamoa: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
  volumeClaimTemplates:
    - metadata:
        name: rabbitmq-data
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    klamoa: rabbitmq
  name: rabbitmq
spec:
  clusterIP: None
  selector:
    klamoa: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
